fix alignment

--- a/assets/scss/pages/series.scss
+++ b/assets/scss/pages/series.scss
@@ -72,8 +72,6 @@
           text-transform: uppercase;
 
           svg {
-            top: 0.3vw;
-            position: relative;
             width: 1.2vw;
             margin-right: 1.250vw;
           }
